# abctk.utils.comparative

./: README.md  pyproject.toml
abctk/utils/comparative/: __init__.py  __main__.py  cli.py  io.py
abctk/utils/comparative/BCCWJ/: cli.py  gen_source.py  incorp.py  loader.py
abctk/utils/comparative/cli/: BCCWJ.py  __init__.py  annot.py
